# pbr_keyword_bug

./: .gitignore  METADATA_correct  METADATA_faulty  README.md  setup.cfg  setup.py
